--- a/index.html
+++ b/index.html
@@ -5,21 +5,59 @@
     <title>Testboinc</title>
   </head>
   <body>
-    <h1><a href="boinc://app/v3/charts_trending">Trending</a></h1><br/>
-<h1><a href="boinc://app/v3/charts_tracks">Top Tracks</a></h1><br/>
-<h1><a href="boinc://app/v3/charts_albums">Top Albums</a></h1><br/>
-<h1><a href="boinc://app/v3/charts_artists">Top Artists</a></h1><br/>
-<h1><a href="boinc://app/v3/profile_activity">Profile Activity</a></h1><br/>
-<h1><a href="boinc://app/v3/profile_connections">Profile Connections</a></h1><br/>
-<h1><a href="boinc://app/v3/profile_achievements">Profile Achievements</a></h1><br/>
-<h1><a href="boinc://app/v3/profile_taste">Profile Music Taste</a></h1><br/>
-<h1><a href="boinc://app/v3/discover_genre_radio">Genre Radio</a></h1><br/>
-<h1><a href="boinc://app/v3/discover_mood_radio">Mood Radio</a></h1><br/>
-<h1><a href="boinc://app/v3/discover_boinc_picks">Boinc Picks</a></h1><br/>
-<h1><a href=""></a></h1><br/>
-<h1><a href=""></a></h1><br/>
-<h1><a href=""></a></h1><br/>
-<h1><a href=""></a></h1><br/>
-<h1><a href=""></a></h1><br/>
+    <h1>Full mode</h1>
+
+<h2>Charts</h2>
+<h3><a href="boinc://app/v3/charts_trending">Trending</a></h3><br/>
+<h3><a href="boinc://app/v3/charts_tracks">Top Tracks</a></h3><br/>
+<h3><a href="boinc://app/v3/charts_albums">Top Albums</a></h3><br/>
+<h3><a href="boinc://app/v3/charts_artists">Top Artists</a></h3><br/>
+
+
+<h2>User Profile</h2>
+<h3><a href="boinc://app/v3/profile_history">Listening History</a></h3><br/>
+<h3><a href="boinc://app/v3/profile_activity">Activity</a></h3><br/>
+<h3><a href="boinc://app/v3/profile_connections">Connections</a></h3><br/>
+<h3><a href="boinc://app/v3/profile_achievements">Achievements</a></h3><br/>
+<h3><a href="boinc://app/v3/profile_taste">Music Taste</a></h3><br/>
+
+
+<h2>Discovery</h2>
+<h3><a href="boinc://app/v3/discover_genre_radio">Genre Radio</a></h3><br/>
+<h3><a href="boinc://app/v3/discover_mood_radio">Mood Radio</a></h3><br/>
+<h3><a href="boinc://app/v3/discover_boinc_picks">boinc Picks</a></h3><br/>
+
+<h2>My Collection</h2>
+<h3><a href="boinc://app/v3/collection/artists">My Artists</a></h3><br/>
+<h3><a href="boinc://app/v3/collection/albums">My Albums</a></h3><br/>
+<h3><a href="boinc://app/v3/collection/tracks">My Tracks</a></h3><br/>
+<h3><a href="boinc://app/v3/collection/playlists">My Playlists</a></h3><br/>
+
+<h2>Specific Screens</h2>
+
+<h2>Artist: Maroon 5</h2>
+<h3><a href="boinc://app/v3/artist/2923/albums">Albums</a></h3><br/>
+<h3><a href="boinc://app/v3/artist/2923/activity">Activity</a></h3><br/>
+<h3><a href="boinc://app/v3/artist/2923/playlists">Playlist</a></h3><br/>
+<h3><a href="boinc://app/v3/artist/2923/followers">Followers</a></h3><br/>
+
+<h2>Leaf Screens</h2>
+<h1><a href="boinc://app/v3/album/690754">Album: Bon Jovi Greatest Hits by Bon Jovi (2010)</a></h1><br/>
+<h1><a href="boinc://app/v3/playlist/76526">Playlist: Dancing</a></h1><br/>
+
+<h2>Other User's Screens: Jonny Lee</h2>
+<h3><a href="boinc://app/v3/user/49804/taste">Music Taste</a></h3><br/>
+<h3><a href="boinc://app/v3/user/49804/achievements">Achievements</a></h3><br/>
+<h3><a href="boinc://app/v3/user/49804/playlists">Playlists</a></h3><br/>
+
+<br/><br/>
+<h3><a href="boinc://app/v3/track/14307116/play">Track: It's A Sin by Pet Shop Boys from Actually album</a></h3><br/>
+
+<h1>Radio mode</h1>
+
+<h3><a href="boinc://app/v3/discover_genre_radio">Genre Radio</a></h3><br/>
+<h3><a href="boinc://app/v3/discover_mood_radio">Mood Radio</a></h3><br/>
+<h3><a href="boinc://app/v3/collection/tracks">My Tracks</a></h3><br/>
+<h3><a href="boinc://app/v3/track/14307116/play">Track: It's A Sin by Pet Shop Boys from Actually album</a></h3><br/>
   </body>
 </html>
