--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <h3><a href="boinc://app/v3/artist/2923/followers">Followers</a></h3><br/>
 
 <h2>Leaf Screens</h2>
-<h1><a href="boinc://app/v3/album/690754">Album: Bon Jovi Greatest Hits by Bon Jovi (2010)</a></h1><br/>
-<h1><a href="boinc://app/v3/playlist/76526">Playlist: Dancing</a></h1><br/>
+<h3><a href="boinc://app/v3/album/690754">Album: Bon Jovi Greatest Hits by Bon Jovi (2010)</a></h3><br/>
+<h3><a href="boinc://app/v3/playlist/76526">Playlist: Dancing</a></h3><br/>
 
 <h2>Other User's Screens: Jonny Lee</h2>
 <h3><a href="boinc://app/v3/user/49804/taste">Music Taste</a></h3><br/>
@@ -58,6 +58,5 @@
 <h3><a href="boinc://app/v3/discover_genre_radio">Genre Radio</a></h3><br/>
 <h3><a href="boinc://app/v3/discover_mood_radio">Mood Radio</a></h3><br/>
 <h3><a href="boinc://app/v3/collection/tracks">My Tracks</a></h3><br/>
-<h3><a href="boinc://app/v3/track/14307116/play">Track: It's A Sin by Pet Shop Boys from Actually album</a></h3><br/>
-  </body>
+<h3><a href="boinc://app/v3/track/14307116/play">Track: It's A Sin by Pet Shop Boys from Actually album</a></h3><br/>  </body>
 </html>
